@@ -68,7 +68,6 @@ extern "C"
     GSASL_INTEGRITY_ERROR = 33,
     GSASL_NO_CLIENT_CODE = 35,
     GSASL_NO_SERVER_CODE = 36,
-    GSASL_INVALID_HANDLE = 50,
     GSASL_NO_CALLBACK = 51,
     GSASL_NO_ANONYMOUS_TOKEN = 52,
     GSASL_NO_AUTHID = 53,
